--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,8 +19,13 @@ color: #ffffff;
         font-size: 21px;
         color: gray;
         }
+        .header--sub-header1{
+            text-align: right;
+                font-size: 21px;
+                color: gray;
+                }
 /*LINK*/
-link--cta{
+.link--cta{
     font-size: 16px;
-    color: aquamarine;
+    color: #7fffd4;
 }
