--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,13 +19,15 @@ color: #ffffff;
         font-size: 21px;
         color: gray;
         }
-        .header--sub-header1{
-            text-align: right;
-                font-size: 21px;
-                color: gray;
-                }
+        
 /*LINK*/
 .link--cta{
     font-size: 16px;
     color: #7fffd4;
 }
+/*FOOTER*/
+.footer--main{
+    text-align: right;
+        font-size: 21px;
+        color: gray;
+        }
